feat(login,lupa_password,verifikasi_otp,atur_ulang_password_baru) : add function helper anda sliced lupa_password_screen,verifikasi_otp_screen_, atur_ulang_password_screen

--- a/app/src/main/res/layouts/auth/layout/atur_ulang_password_screen.xml
+++ b/app/src/main/res/layouts/auth/layout/atur_ulang_password_screen.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_color"
-    tools:context=".auth.LupaPassword">
+    tools:context=".auth.AturUlangPassword">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -30,8 +29,7 @@
 
 
             <com.google.android.material.card.MaterialCardView
-                android:clipToOutline="false"
-                android:id="@+id/lupa_password_material_card_layout"
+                android:id="@+id/atur_ulang_password_material_card_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/img_login"
@@ -55,7 +53,7 @@
                     <com.google.android.material.textview.MaterialTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Lupa Password"
+                        android:text="Atur Ulang Password"
                         android:textAppearance="@style/text_bold_primary"
                         android:textSize="24sp" />
 
@@ -63,36 +61,36 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:textAlignment="textStart"
-                        android:text="Silahkan masukkan email Anda yang telah terdaftar.
-Kode otp untuk mengatur ulang password akan kami
-kirimkan via email."
+                        android:text="Silahkan atur ulang pasword anda"
                         android:textAppearance="@style/text_regular_secondary"
                         android:textSize="12sp" />
-
                     <com.google.android.material.textview.MaterialTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
-                        android:text="Email"
+                        android:text="Password Baru"
                         android:textAppearance="@style/text_regular_font_primary" />
 
                     <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/InputLayout_lupa_password_email"
+                        android:id="@+id/InputLayout_password_baru"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
                         android:background="@drawable/text_field_login_rounded"
                         app:boxBackgroundMode="none"
-                        app:hintEnabled="false">
+                        app:endIconDrawable="@drawable/icons_password_toggle"
+                        app:errorContentDescription="@string/bottom_sheet_behavior"
+                        app:endIconMode="password_toggle"
+                        app:hintEnabled="false"
+                        app:passwordToggleEnabled="true">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/EditText_login_nim"
+                            android:id="@+id/EditText_password_baru"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/golos_text_regular"
-                            android:hint="email@example.org"
+                            android:hint="xxxxxxxxxxx"
+                            android:inputType="textPassword"
                             android:maxLines="1"
                             android:padding="15dp"
                             android:textColor="@color/font_primary_color"
@@ -100,25 +98,62 @@ kirimkan via email."
                             android:textSize="12sp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
+<!--                    <com.google.android.material.textview.MaterialTextView-->
+<!--                        android:id="@+id/error_password_baru_notif"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginTop="10dp"-->
+<!--                        android:fontFamily="@font/golos_text_regular"-->
+<!--                        android:visibility="gone"-->
+<!--                        android:textSize="12sp"-->
+<!--                        android:layout_marginBottom="20dp"-->
+<!--                        android:text="Password Salah" />-->
+
+
                     <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/error_email_notif"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Email yang anda masukkan tidak valid/tidak terdaftar"
-                        android:fontFamily="@font/golos_text_regular"
-                        android:textSize="12sp"
-                        android:visibility="gone"/>
+                        android:layout_marginTop="15dp"
+                        android:text="Konfirmasi Password"
+                        android:textAppearance="@style/text_regular_font_primary" />
 
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/InputLayout_konfirmasi_password_baru"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/text_field_login_rounded"
+                        app:boxBackgroundMode="none"
+                        app:endIconDrawable="@drawable/icons_password_toggle"
+                        app:errorContentDescription="@string/bottom_sheet_behavior"
+                        app:endIconMode="password_toggle"
+                        app:hintEnabled="false"
+                        app:passwordToggleEnabled="true">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/EditText_konfirmasi_password_baru"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/golos_text_regular"
+                            android:hint="xxxxxxxxxxx"
+                            android:inputType="textPassword"
+                            android:maxLines="1"
+                            android:padding="15dp"
+                            android:textColor="@color/font_primary_color"
+                            android:textColorHint="@color/font_secondary_variant"
+                            android:textSize="12sp" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.button.MaterialButton
-                        android:id="@+id/btn_lupa_password_screen"
+                        android:id="@+id/btn_atur_ulang_password"
                         style="@style/Widget.MaterialComponents.Button"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="133dp"
+                        android:layout_marginTop="85dp"
                         android:layout_marginBottom="37dp"
                         android:backgroundTint="@color/primary_color"
-                        android:text="SELANJUTNYA"
+                        android:text="GANTI PASSWORD"
                         android:textAppearance="@style/text_bold_plain"
                         android:textColor="@color/white_color"
                         app:cornerRadius="12dp" />
@@ -133,7 +168,6 @@ kirimkan via email."
 
 
     </ScrollView>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
