--- a/app/src/main/res/layouts/navbar/home_menu/layout/input_judul_ta_screen.xml
+++ b/app/src/main/res/layouts/navbar/home_menu/layout/input_judul_ta_screen.xml
@@ -233,6 +233,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_kirim_input_judul_ta"
                     style="@style/Widget.MaterialComponents.Button"
                     android:layout_width="match_parent"
                     android:layout_height="51dp"
