feat(Get) : update alert dialog with image and adding alert dialog to logout button

--- a/app/src/main/res/layouts/navbar/layout/profile_screen.xml
+++ b/app/src/main/res/layouts/navbar/layout/profile_screen.xml
@@ -295,6 +295,7 @@
                     app:strokeColor="@color/primary_color" />
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_logout_profile"
                     style="@style/Widget.MaterialComponents.Button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
