--- a/app/src/main/res/layouts/alert_dialogs/layout/dialog_form.xml
+++ b/app/src/main/res/layouts/alert_dialogs/layout/dialog_form.xml
@@ -10,6 +10,7 @@
     android:gravity="center"
     android:padding="16dp">
     <ImageView
+        android:id="@+id/image_dialog"
         android:layout_gravity="center"
         android:layout_width="200dp"
         android:layout_height="200dp"
