--- a/app/src/main/res/layouts/navbar/home_menu/layout/form_pengajuan_screen.xml
+++ b/app/src/main/res/layouts/navbar/home_menu/layout/form_pengajuan_screen.xml
@@ -156,6 +156,7 @@
 
             <com.google.android.material.button.MaterialButton
                 style="@style/Widget.MaterialComponents.Button"
+                android:id="@+id/btn_kirim_form_pengajuan"
                 android:layout_width="match_parent"
                 android:layout_height="51dp"
                 android:layout_marginTop="40dp"
