--- a/app/src/main/res/layouts/alert_dialogs/layout/dialog_form.xml
+++ b/app/src/main/res/layouts/alert_dialogs/layout/dialog_form.xml
@@ -38,7 +38,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_positive_response"
             app:cornerRadius="8dp"
-            android:layout_width="147dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
             android:text="Ya kirim"
@@ -48,7 +48,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_negative_response"
             app:cornerRadius="8dp"
-            android:layout_width="147dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/red_colorButton"
             android:text="batal"
